# agent-config-ansible

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  ansible.cfg  pyproject.toml
.agents/skills/follow-upstream-upgrade/: SKILL.md
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: completion_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
docs/: tool-adaptation-candidates.md
inventory/default/: inventory.yml
inventory/default/agent_skills_assets/: README.md
inventory/default/claude_assets/: README.md
inventory/default/codex_assets/: AGENTS.md  README.md
inventory/default/gemini_assets/: README.md
playbooks/: preheat_agent_mcps.yml  setup_agent_skills.yml  setup_claude_code.yml  setup_codex.yml  setup_copilot_cli.yml  setup_cursor.yml  setup_gemini_cli.yml  setup_opencode.yml  setup_opencommit.yml
roles/agent_claude_code/: README.md
roles/agent_claude_code/defaults/: main.yml
roles/agent_claude_code/meta/: main.yml
roles/agent_codex/: README.md
roles/agent_copilot_cli/: README.md
roles/agent_cursor/: README.md
roles/agent_gemini_cli/: README.md
roles/agent_opencode/: README.md
roles/agent_opencommit/: README.md
roles/managed_agent_skills/: README.md
roles/managed_file/: README.md
roles/managed_json_merge/: README.md
roles/managed_tree/: README.md
roles/npm_command_bootstrap/: README.md
roles/opencommit_cli/: README.md
scripts/: run-playbook.sh
tests/: test_follow_upstream_upgrade.py  test_inventory_defaults_cleanup.py  test_run_playbook.py
(+204 files in other folders)
